@@ -5572,69 +5572,113 @@ rt_raster_gdal_polygonize(
 	return pols;
 }
 
-LWPOLY*
+LWGEOM*
 rt_raster_get_convex_hull(rt_raster raster) {
-		double gt[6] = {0.0};
-    POINTARRAY **rings = NULL;
-    POINTARRAY *pts = NULL;
-    LWPOLY* ret = NULL;
-    POINT4D p4d;
+	int srid = SRID_UNKNOWN;
+	double gt[6] = {0.0};
+	LWGEOM *geom = NULL;
+	POINTARRAY *pts = NULL;
+	POINT4D p4d;
 
-    assert(NULL != raster);
+	if (raster == NULL)
+		return NULL;
 
-    RASTER_DEBUGF(3, "rt_raster_get_convex_hull: raster is %dx%d",
-            raster->width, raster->height);
+	RASTER_DEBUGF(3, "rt_raster_get_convex_hull: raster is %dx%d", raster->width, raster->height);
 
-    if ((!raster->width) || (!raster->height)) {
-        return 0;
-    }
+	/* raster metadata */
+	srid = rt_raster_get_srid(raster);
+	rt_raster_get_geotransform_matrix(raster, gt);
 
-    rings = (POINTARRAY **) rtalloc(sizeof (POINTARRAY*));
-    if (!rings) {
-        rterror("rt_raster_get_convex_hull: Out of memory [%s:%d]", __FILE__, __LINE__);
-        return 0;
-    }
-    rings[0] = ptarray_construct(0, 0, 5);
-    /* TODO: handle error on ptarray construction */
-    /* XXX jorgearevalo: the error conditions aren't managed in ptarray_construct */
-    if (!rings[0]) {
-        rterror("rt_raster_get_convex_hull: Out of memory [%s:%d]", __FILE__, __LINE__);
-        return 0;
-    }
-    pts = rings[0];
+	/* return point or line */
+	if ((!raster->width) || (!raster->height)) {
+		p4d.x = gt[0];
+		p4d.y = gt[3];
 
-    /* Upper-left corner (first and last points) */
-    rt_raster_cell_to_geopoint(raster,
-            0, 0,
-            &p4d.x, &p4d.y,
-						gt);
-    ptarray_set_point4d(pts, 0, &p4d);
-    ptarray_set_point4d(pts, 4, &p4d); /* needed for closing it? */
+		/* return point */
+		if (!raster->width && !raster->height) {
+			LWPOINT *point = lwpoint_make2d(srid, p4d.x, p4d.y);
+			geom = lwpoint_as_lwgeom(point);
+		}
+		else {
+			LWLINE *line = NULL;
+			pts = ptarray_construct_empty(0, 0, 2);
 
-    /* Upper-right corner (we go clockwise) */
-    rt_raster_cell_to_geopoint(raster,
-            raster->width, 0,
-            &p4d.x, &p4d.y,
-						gt);
-    ptarray_set_point4d(pts, 1, &p4d);
+			/* first point of line */
+			ptarray_append_point(pts, &p4d, LW_TRUE);
 
-    /* Lower-right corner */
-    rt_raster_cell_to_geopoint(raster,
-            raster->width, raster->height,
-            &p4d.x, &p4d.y,
-						gt);
-    ptarray_set_point4d(pts, 2, &p4d);
+			/* second point of line */
+			if (!rt_raster_cell_to_geopoint(
+				raster,
+				raster->width, raster->height,
+				&p4d.x, &p4d.y,
+				gt
+			)) {
+				rterror("rt_raster_get_convex_hull: Unable to get second point for linestring");
+				return NULL;
+			}
+			ptarray_append_point(pts, &p4d, LW_TRUE);
+			line = lwline_construct(srid, NULL, pts);
 
-    /* Lower-left corner */
-    rt_raster_cell_to_geopoint(raster,
-            0, raster->height,
-            &p4d.x, &p4d.y,
-						gt);
-    ptarray_set_point4d(pts, 3, &p4d);
+			geom = lwline_as_lwgeom(line);
+		}
+	}
+	else {
+		POINTARRAY **rings = NULL;
+		LWPOLY* poly = NULL;
 
-    ret = lwpoly_construct(rt_raster_get_srid(raster), 0, 1, rings);
+		rings = (POINTARRAY **) rtalloc(sizeof (POINTARRAY*));
+		if (!rings) {
+			rterror("rt_raster_get_convex_hull: Out of memory [%s:%d]", __FILE__, __LINE__);
+			return NULL;
+		}
 
-    return ret;
+		rings[0] = ptarray_construct(0, 0, 5);
+		/* TODO: handle error on ptarray construction */
+		/* XXX jorgearevalo: the error conditions aren't managed in ptarray_construct */
+		if (!rings[0]) {
+			rterror("rt_raster_get_convex_hull: Out of memory [%s:%d]", __FILE__, __LINE__);
+			return NULL;
+		}
+		pts = rings[0];
+
+		/* Upper-left corner (first and last points) */
+		p4d.x = gt[0];
+		p4d.y = gt[3];
+		ptarray_set_point4d(pts, 0, &p4d);
+		ptarray_set_point4d(pts, 4, &p4d);
+
+		/* Upper-right corner (we go clockwise) */
+		rt_raster_cell_to_geopoint(
+			raster,
+			raster->width, 0,
+			&p4d.x, &p4d.y,
+			gt
+		);
+		ptarray_set_point4d(pts, 1, &p4d);
+
+		/* Lower-right corner */
+		rt_raster_cell_to_geopoint(
+			raster,
+			raster->width, raster->height,
+			&p4d.x, &p4d.y,
+			gt
+		);
+		ptarray_set_point4d(pts, 2, &p4d);
+
+		/* Lower-left corner */
+		rt_raster_cell_to_geopoint(
+			raster,
+			0, raster->height,
+			&p4d.x, &p4d.y,
+			gt
+		);
+		ptarray_set_point4d(pts, 3, &p4d);
+
+		poly = lwpoly_construct(srid, 0, 1, rings);
+		geom = lwpoly_as_lwgeom(poly);
+	}
+
+	return geom;
 }
 
 /**
@@ -5757,7 +5801,7 @@ rt_raster_compute_skewed_raster(
 	int x;
 	int y;
 
-	LWPOLY *spoly = NULL;
+	LWGEOM *geom = NULL;
 	GEOSGeometry *sgeom = NULL;
 	GEOSGeometry *ngeom = NULL;
 
@@ -6015,17 +6059,17 @@ rt_raster_compute_skewed_raster(
 	do {
 		covers = 0;
 
-		/* construct spoly from raster */
-		spoly = rt_raster_get_convex_hull(raster);
-		if (spoly == NULL) {
+		/* construct geom from raster */
+		geom = rt_raster_get_convex_hull(raster);
+		if (geom == NULL) {
 			rterror("rt_raster_compute_skewed_raster: Unable to build skewed extent's geometry for covers test");
 			GEOSGeom_destroy(ngeom);
 			rt_raster_destroy(raster);
 			return NULL;
 		}
 
-		sgeom = (GEOSGeometry *) LWGEOM2GEOS(lwpoly_as_lwgeom(spoly));
-		lwpoly_free(spoly);
+		sgeom = (GEOSGeometry *) LWGEOM2GEOS(geom);
+		lwgeom_free(geom);
 
 		covers = GEOSRelatePattern(sgeom, ngeom, "******FF*");
 		GEOSGeom_destroy(sgeom);
@@ -6064,17 +6108,17 @@ rt_raster_compute_skewed_raster(
 			else
 				raster->height--;
 			
-			/* construct spoly from raster */
-			spoly = rt_raster_get_convex_hull(raster);
-			if (spoly == NULL) {
+			/* construct geom from raster */
+			geom = rt_raster_get_convex_hull(raster);
+			if (geom == NULL) {
 				rterror("rt_raster_compute_skewed_raster: Unable to build skewed extent's geometry for minimizing dimensions");
 				GEOSGeom_destroy(ngeom);
 				rt_raster_destroy(raster);
 				return NULL;
 			}
 
-			sgeom = (GEOSGeometry *) LWGEOM2GEOS(lwpoly_as_lwgeom(spoly));
-			lwpoly_free(spoly);
+			sgeom = (GEOSGeometry *) LWGEOM2GEOS(geom);
+			lwgeom_free(geom);
 
 			covers = GEOSRelatePattern(sgeom, ngeom, "******FF*");
 			GEOSGeom_destroy(sgeom);
@@ -10844,7 +10888,7 @@ rt_raster_intersects(
 	int j;
 	int within = 0;
 
-	LWPOLY *hull[2] = {NULL};
+	LWGEOM *hull[2] = {NULL};
 	GEOSGeometry *ghull[2] = {NULL};
 
 	uint16_t width1;
@@ -10917,18 +10961,18 @@ rt_raster_intersects(
 			if (NULL == hull[i]) {
 				for (j = 0; j < i; j++) {
 					GEOSGeom_destroy(ghull[j]);
-					lwpoly_free(hull[j]);
+					lwgeom_free(hull[j]);
 				}
 				rtn = 0;
 				break;
 			}
-			ghull[i] = (GEOSGeometry *) LWGEOM2GEOS(lwpoly_as_lwgeom(hull[i]));
+			ghull[i] = (GEOSGeometry *) LWGEOM2GEOS(hull[i]);
 			if (NULL == ghull[i]) {
 				for (j = 0; j < i; j++) {
 					GEOSGeom_destroy(ghull[j]);
-					lwpoly_free(hull[j]);
+					lwgeom_free(hull[j]);
 				}
-				lwpoly_free(hull[i]);
+				lwgeom_free(hull[i]);
 				rtn = 0;
 				break;
 			}
@@ -10949,7 +10993,7 @@ rt_raster_intersects(
 
 		for (i = 0; i < 2; i++) {
 			GEOSGeom_destroy(ghull[i]);
-			lwpoly_free(hull[i]);
+			lwgeom_free(hull[i]);
 		}
 
 		if (rtn != 2) {
