@@ -2,6 +2,7 @@ PostGIS 2.0.3
 2013/MM/DD
 
  * Bug Fixes *
+  - #2126, Better handling of empty rasters from ST_ConvexHull()
   - #2134, Make sure to process SRS before passing it off to GDAL functions
 
 PostGIS 2.0.2
